commit on 'main'

--- a/exp 4.html
+++ b/exp 4.html
@@ -58,7 +58,18 @@
             }
         </script>
         <style>
-
+            .fact:hover{
+                background-color:red;
+            }
+            .fib:hover{
+                background-color:pink;
+            }
+            .pali:hover{
+                background-color:green;
+            }
+            .Prime:hover{
+                background-color:orange;
+            }
         </style>
     </head>
     <body>
